change orientation_str (Unicode) to orientation (List of List) (#110)
* link camera

* update nb

--- a/nglview/tests/notebooks/test_camera.ipynb
+++ b/nglview/tests/notebooks/test_camera.ipynb
@@ -2,9 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [],
    "source": [
@@ -21,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -32,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -41,12 +42,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'near': 30.005539107620812, 'far': 129.99446089237918, 'type': 'PerspectiveCamera', 'fov': 40, 'zoom': 1, 'matrix': [0.1266540139913559, 0.331083744764328, -0.9350627064704895, 0, -0.28803011775016785, 0.9143145084381104, 0.284723699092865, 0, 0.9492088556289673, 0.23326481878757477, 0.2111636847257614, 0, 75.93670654296875, 18.66118621826172, 16.893096923828125, 1], 'uuid': 'FD998EC2-C3FB-4B87-8676-6A5DD07A527B', 'focalLength': 100, 'aspect': 3.29796875}\n"
+      "{'object': {'uuid': '68AAF639-369F-42BC-B047-5FADAF27A382', 'near': 0.1, 'zoom': 1, 'far': 10000, 'focalLength': 100, 'aspect': 3.29796875, 'type': 'PerspectiveCamera', 'matrix': [1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1], 'fov': 40}}\n"
      ]
     }
    ],
    "source": [
-    "camera = json.loads(view.camera_str)['object']\n",
+    "camera = json.loads(view.camera_str)\n",
     "print(camera)\n",
     "\n",
     "# seems this does not work with different browswers\n",
@@ -59,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -71,9 +72,8 @@
     "text_camera = Textarea()\n",
     "text_orientation = Textarea()\n",
     "link((view, 'camera_str'), (text_camera, \"value\"))\n",
-    "link((view, 'orientation_str'), (text_orientation, \"value\"))\n",
     "\n",
-    "HBox([text_camera, text_orientation])"
+    "text_camera"
    ]
   }
  ],
@@ -93,7 +93,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.4.4"
   }
  },
  "nbformat": 4,
