--- a/nglview/tests/notebooks/caching.ipynb
+++ b/nglview/tests/notebooks/caching.ipynb
@@ -40,6 +40,28 @@
    "source": [
     "view.add_licorice()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "view.frame = 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "assert isinstance(view.coordinates, list)"
+   ]
   }
  ],
  "metadata": {
