--- a/nglview/tests/notebooks/get_parameters.ipynb
+++ b/nglview/tests/notebooks/get_parameters.ipynb
@@ -17,13 +17,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "view.parameters = {'quality': 'high'}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "params = dict(type='get',\n",
+    "             data='parameters')\n",
+    "view.send(params)"
    ]
   },
   {
@@ -88,9 +101,6 @@
     }
    ],
    "source": [
-    "params = dict(type='get',\n",
-    "             data='parameters')\n",
-    "view.send(params)\n",
     "view._ngl_msg"
    ]
   },
@@ -122,7 +132,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.4.4"
+   "version": "3.5.1"
   }
  },
  "nbformat": 4,
