--- a/nglview/tests/notebooks/layout.ipynb
+++ b/nglview/tests/notebooks/layout.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -24,24 +24,55 @@
    "source": [
     "from ipywidgets import HBox, VBox\n",
     "\n",
-    "vboxes = [VBox([views[0], views[1]]),\n",
-    "          VBox([views[2], views[3]])]\n",
-    "hbox = HBox([views[0], views[1]])\n",
-    "hbox"
+    "vbox = VBox([views[0], views[1]])\n",
+    "vbox"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<traitlets.traitlets.link at 0x7f5b075f4128>"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from traitlets import link\n",
+    "\n",
+    "link((views[0], 'orientation'), (views[1], 'orientation'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "views[0]._clear_repr()\n",
-    "views[1]._clear_repr()\n",
     "views[0].add_licorice('not hydrogen', color='blue')\n",
     "views[1].add_rope('not hydrogen', color='residueindex')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "views[0]._clear_repr()"
    ]
   }
  ],
