--- a/nglview/tests/notebooks/remote_call-complist.ipynb
+++ b/nglview/tests/notebooks/remote_call-complist.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -51,7 +51,7 @@
    },
    "outputs": [],
    "source": [
-    "view.center_view(selection='1-2', index=1)"
+    "view.center_view(selection='1-2', model=1)"
    ]
   }
  ],
@@ -71,7 +71,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.4.4"
+   "version": "3.5.1"
   }
  },
  "nbformat": 4,
