--- a/nglview/tests/notebooks/reference_structure.ipynb
+++ b/nglview/tests/notebooks/reference_structure.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -38,14 +38,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
     "# add selection for referene (index=1 in compList)\n",
-    "view._clear_repr(index=1)\n",
+    "view._clear_repr(model=1)\n",
     "\n",
     "# make reference grey\n",
     "view.add_cartoon(color='grey', index=1)"
@@ -68,7 +68,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.4.4"
+   "version": "3.5.1"
   }
  },
  "nbformat": 4,
