--- a/nglview/tests/notebooks/remove_component.ipynb
+++ b/nglview/tests/notebooks/remove_component.ipynb
@@ -2,11 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 1,
-=======
-   "execution_count": 31,
->>>>>>> reference_str
    "metadata": {
     "collapsed": false
    },
@@ -24,11 +20,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 7,
-=======
-   "execution_count": 36,
->>>>>>> reference_str
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -36,41 +28,19 @@
    "source": [
     "traj2 = pt.datafiles.load_tz2()[:1]\n",
     "\n",
-    "view._add_reference(nv.PyTrajTrajectory(traj2))"
+    "view._load_data(nv.PyTrajTrajectory(traj2))"
    ]
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 4,
-=======
-   "execution_count": 37,
->>>>>>> reference_str
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-<<<<<<< HEAD
-    "view._remote_call(\"removeComponent\", target='Stage',\n",
-    "                 args=[1,])"
+    "view._remove_component(model=1)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "view._remove_component(index=1)"
-   ]
-=======
-    "view._remote_call(\"remove_component\", target='Stage',\n",
-    "                 args=[1,])"
-   ]
->>>>>>> reference_str
   }
  ],
  "metadata": {
@@ -89,7 +59,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.4.4"
+   "version": "3.5.1"
   },
   "widgets": {
    "state": {},
