--- a/nglview/tests/notebooks/send_message.ipynb
+++ b/nglview/tests/notebooks/send_message.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -16,7 +16,7 @@
     "xyz = traj.xyz\n",
     "msg_list  = dict(data=xyz.flatten().tolist())\n",
     "msg_bytes = xyz.ravel().tobytes()\n",
-    "msg_base64 = view.trajectory.get_coordinate_dict()\n",
+    "msg_base64 = view.trajlist[0].get_coordinates_dict()\n",
     "view"
    ]
   },
@@ -134,7 +134,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.4.4"
+   "version": "3.5.1"
   }
  },
  "nbformat": 4,
