--- a/nglview/tests/notebooks/test_camera.ipynb
+++ b/nglview/tests/notebooks/test_camera.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -42,7 +42,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'object': {'uuid': '68AAF639-369F-42BC-B047-5FADAF27A382', 'near': 0.1, 'zoom': 1, 'far': 10000, 'focalLength': 100, 'aspect': 3.29796875, 'type': 'PerspectiveCamera', 'matrix': [1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1], 'fov': 40}}\n"
+      "{'object': {'aspect': 3.244666748046875, 'near': 0.1, 'uuid': '22A246C3-CBCF-4BA1-AA12-38BF1CC747E8', 'fov': 40, 'zoom': 1, 'matrix': [1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1], 'type': 'PerspectiveCamera', 'focalLength': 100, 'far': 10000}}\n"
      ]
     }
    ],
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -93,7 +93,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.4.4"
+   "version": "3.5.1"
   }
  },
  "nbformat": 4,
