--- a/nglview/tests/notebooks/test_link_camera.ipynb
+++ b/nglview/tests/notebooks/test_link_camera.ipynb
@@ -45,7 +45,7 @@
     {
      "data": {
       "text/plain": [
-       "<traitlets.traitlets.link at 0x2aaacc517198>"
+       "<traitlets.traitlets.link at 0x7f2b94f05e80>"
       ]
      },
      "execution_count": 3,
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -73,7 +73,7 @@
        "[[0, 0, -80], [0, 1, 0], [0, 0, 0], [0, 0, 0]]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -99,7 +99,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.4.4"
+   "version": "3.5.1"
   }
  },
  "nbformat": 4,
