we can view more than one trajectory in the same Widget (#113)
view many trajectories

--- a/nglview/tests/notebooks/trajlist_mdtraj.ipynb
+++ b/nglview/tests/notebooks/trajlist_mdtraj.ipynb
@@ -8,11 +8,19 @@
    },
    "outputs": [],
    "source": [
-    "import pytraj as pt\n",
+    "import mdtraj as md\n",
+    "from nglview import datafiles\n",
     "import nglview as nv\n",
     "\n",
-    "traj = pt.datafiles.load_tz2()\n",
-    "view = nv.show_pytraj(traj)\n",
+    "traj0 = md.load('../data/tz2.pdb')\n",
+    "# \n",
+    "traj1 = md.load(datafiles.XTC, top=datafiles.PDB)\n",
+    "\n",
+    "trajlist = [nv.MDTrajTrajectory(traj) for traj in [traj0, traj1]]\n",
+    "\n",
+    "trajlist\n",
+    "\n",
+    "view = nv.NGLWidget(trajlist)\n",
     "view"
    ]
   },
@@ -24,7 +32,8 @@
    },
    "outputs": [],
    "source": [
-    "view.add_cartoon()"
+    "# try cache\n",
+    "view.caching()"
    ]
   },
   {
@@ -35,18 +44,19 @@
    },
    "outputs": [],
    "source": [
-    "view.add_rope()"
+    "view.uncaching()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "view.add_line()"
+    "# clear repr: trpcage\n",
+    "view._clear_repr(model=1)"
    ]
   },
   {
@@ -57,18 +67,20 @@
    },
    "outputs": [],
    "source": [
-    "view.add_licorice(color='residueindex')"
+    "# clear repr: trpzip2\n",
+    "view._clear_repr(model=0)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
-    "view.representations = []"
+    "# try back: trpcage\n",
+    "view.add_line(model=1)"
    ]
   },
   {
@@ -79,7 +91,9 @@
    },
    "outputs": [],
    "source": [
-    "view.add_line()"
+    "# try back: trpzip2\n",
+    "\n",
+    "view.add_cartoon(color='residueindex')"
    ]
   },
   {
@@ -90,30 +104,26 @@
    },
    "outputs": [],
    "source": [
-    "view.representations = []"
+    "assert isinstance(view.coordinates, list)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# show_mdtraj: not yet"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "view2 = nv.show_structure_file('tz2.pdb')\n",
-    "view2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "view2.center_view()"
+    "# view1 = nv.show_mdtraj([traj0, traj1])\n",
+    "# view1"
    ]
   }
  ],
