--- a/nglview/tests/notebooks/trajlist_pytraj.ipynb
+++ b/nglview/tests/notebooks/trajlist_pytraj.ipynb
@@ -2,118 +2,139 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "import pytraj as pt\n",
-    "import nglview as nv\n",
+    "import  nglview as nv\n",
     "\n",
-    "traj = pt.datafiles.load_tz2()\n",
-    "view = nv.show_pytraj(traj)\n",
+    "traj0 = pt.datafiles.load_tz2()[:].center('origin')\n",
+    "\n",
+    "# \n",
+    "traj1 = pt.datafiles.load_trpcage()[:].center('origin')\n",
+    "\n",
+    "trajlist = [nv.PyTrajTrajectory(traj) for traj in [traj0, traj1]]\n",
+    "\n",
+    "trajlist\n",
+    "\n",
+    "view = nv.NGLWidget(trajlist)\n",
     "view"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "view.add_cartoon()"
+    "# try cache\n",
+    "view.caching()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "view.add_rope()"
+    "view.uncaching()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "view.add_line()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "view.add_licorice(color='residueindex')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "view.representations = []"
+    "traj0.superpose(mask=':1-3', ref=traj1[:1])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "view.add_line()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "view.representations = []"
+    "# clear repr: trpcage\n",
+    "view._clear_repr(model=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "view2 = nv.show_structure_file('tz2.pdb')\n",
-    "view2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "view2.center_view()"
+    "# clear repr: trpzip2\n",
+    "view._clear_repr(model=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# try back: trpcage\n",
+    "view.add_line(model=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# try back: trpzip2\n",
+    "\n",
+    "view.add_cartoon(color='residueindex')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "assert isinstance(view.coordinates, list)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# show_pytraj"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "view1 = nv.show_pytraj([traj0, traj1])\n",
+    "view1"
    ]
   }
  ],
