fix image export

--- a/nglview/tests/notebooks/export_image.ipynb
+++ b/nglview/tests/notebooks/export_image.ipynb
@@ -18,15 +18,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "args = [2, True, True, False]\n",
-    "\n",
-    "view.export_image(*args)"
+    "view.export_image()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    def export_image(self, factor=1,\n",
+      "                     antialias=True,\n",
+      "                     trim=False,\n",
+      "                     transparent=False):\n",
+      "        \"\"\"render and download scence at current frame\n",
+      "        \"\"\"\n",
+      "        onProgress = False\n",
+      "        params = dict(factor=factor,\n",
+      "                      antialias=antialias,\n",
+      "                      trim=trim,\n",
+      "                      transparent=transparent)\n",
+      "        self._remote_call('makeImage',\n",
+      "                          target='Stage',\n",
+      "                          kwargs=params)\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "pt.misc.show_code(view.export_image)"
    ]
   }
  ],
