change export_image to download_image

--- a/nglview/tests/notebooks/export_image.ipynb
+++ b/nglview/tests/notebooks/export_image.ipynb
@@ -18,13 +18,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "view.export_image()"
+    "view.download_image('test.png', \n",
+    "                    factor=6,\n",
+    "                    trim=True)"
    ]
   }
  ],
