--- a/nglview/tests/notebooks/export_image.ipynb
+++ b/nglview/tests/notebooks/export_image.ipynb
@@ -18,15 +18,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "view.download_image('test.png', \n",
-    "                    factor=6,\n",
-    "                    trim=True)"
+    "                    factor=8,\n",
+    "                    trim=True,\n",
+    "                    transparent=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "view.parameters = {'theme': 'dark'}"
    ]
   }
  ],
