Ngl update2 image - should try it first (#125)
* fix surface

* fix image export

* add simpletraj to testsuite

--- a/nglview/tests/notebooks/download_image.ipynb
+++ b/nglview/tests/notebooks/download_image.ipynb
@@ -18,15 +18,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "view.download_image('test.png', \n",
+    "                    factor=8,\n",
+    "                    trim=True,\n",
+    "                    transparent=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "args = [2, True, True, False]\n",
-    "\n",
-    "view.export_image(*args)"
+    "view.parameters = {'theme': 'dark'}"
    ]
   }
  ],
@@ -46,7 +58,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.4.4"
   }
  },
  "nbformat": 4,
