--- a/nglview/tests/notebooks/load_dx.ipynb
+++ b/nglview/tests/notebooks/load_dx.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -27,35 +27,35 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "view.add_surface(color_scheme='uniform', color_value='red', box_size=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "view.add_surface(colorScheme='uniform', colorValue='red', boxSize=0)"
+    "view._load_data(open('../data/tz2.pdb').read(), ext='pdb')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "view._load_data(open('../tz2.pdb').read(), ext='pdb')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "view.add_cartoon(color='blue', index=1)"
+    "view.add_cartoon(color='blue', model=1)"
    ]
   }
  ],
@@ -75,7 +75,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.4.4"
+   "version": "3.5.1"
   }
  },
  "nbformat": 4,
