--- a/nglview/tests/notebooks/test_show_pdbid.ipynb
+++ b/nglview/tests/notebooks/test_show_pdbid.ipynb
@@ -53,7 +53,7 @@
    "outputs": [],
    "source": [
     "pdb = nv.PdbIdStructure('1tsu')\n",
-    "view2.load_model(pdb)"
+    "view2.add_model(pdb)"
    ]
   },
   {
