--- a/nglview/tests/notebooks/test_file_manager/test_show_structure_file.ipynb
+++ b/nglview/tests/notebooks/test_file_manager/test_show_structure_file.ipynb
@@ -15,6 +15,21 @@
     "view = nv.show_structure_file(fh)\n",
     "view"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "!cp ../../data/tz2.pdb .\n",
+    "\n",
+    "fn2 = 'tz2.pdb'\n",
+    "\n",
+    "nv.show_structure_file(fn2)"
+   ]
   }
  ],
  "metadata": {
