--- a/nglview/tests/notebooks/test_file_manager/test_file_manager.ipynb
+++ b/nglview/tests/notebooks/test_file_manager/test_file_manager.ipynb
@@ -9,8 +9,7 @@
    "outputs": [],
    "source": [
     "import nglview as nv\n",
-    "\n",
-    "view = nv.show_pdbid(\"1tsu\")\n",
+    "view = nv.NGLWidget()\n",
     "view"
    ]
   },
@@ -22,97 +21,71 @@
    },
    "outputs": [],
    "source": [
+    "fh = '../../data/tz2_2.pdb.gz'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "view.add_model(fh)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
     "view.add_surface(opacity=0.3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "view.center_view()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Make empty Widget first"
+    "## Passing blob"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "view2 = nv.NGLWidget()\n",
-    "view2"
+    "import gzip\n",
+    "\n",
+    "blob = gzip.open(fh).read()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "pdb = nv.PdbIdStructure('1tsu')\n",
-    "view2.add_model(pdb)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "import pytraj as pt\n",
-    "\n",
-    "traj = pt.fetch_pdb('1l2y')\n",
-    "\n",
-    "ntraj = nv.PyTrajTrajectory(traj)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "view2.add_trajectory(ntraj)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "view2.clear_representations(model=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "view2.add_licorice(model=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "view2.center_view(model=1)"
+    "fm = nv.utils.FileManager(blob)"
    ]
   }
  ],
