--- a/nglview/tests/notebooks/test_no_player_with_single_structure.ipynb
+++ b/nglview/tests/notebooks/test_no_player_with_single_structure.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -42,6 +42,37 @@
     " [0.05435179236389439, 0.9916067962822772, -0.11731088710620691],\n",
     " [-40.204999923706055, -42.970001220703125, -44.16499936580658],\n",
     " [0, 0, 0]]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Expect player"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "traj = pt.datafiles.load_trpcage()\n",
+    "\n",
+    "view.add_trajectory(nv.PyTrajTrajectory(traj))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "view.center_view(model=1)"
    ]
   }
  ],
